ast/src/snapshots/transmute_ast__parser__tests__err_expression_missing_right_parenthesis_eof.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"(42\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected `)` to close `(` at 1:1, got `eof`",
                span: 1:4; [3, 3],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    976,
                ),
            },
        ],
    },
)
