ast/src/snapshots/transmute_ast__parser__tests__err_function_call_missing_closing_parenthesis.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"f(42;\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `;`, expected one of (14) `,`, `.`, `)`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`, `[`",
                span: 1:5; [4, 5],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1569,
                ),
            },
        ],
    },
)
