ast/src/snapshots/transmute_ast__parser__tests__err_function_call_missing_closing_parenthesis_no_arguments.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"f(;\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `;`, expected one of (10) identifier, number, `true`, `false`, `if`, `while`, `)`, `(`, `-`, `[`",
                span: 1:3; [2, 3],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1748,
                ),
            },
        ],
    },
)
