ast/src/snapshots/transmute_ast__parser__tests__err_function_call_missing_comma.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected `,`, got number",
                span: 1:6; [5, 7],
                level: Error,
            },
        ],
        inputs: (),
    },
)
