ast/src/snapshots/transmute_ast__parser__tests__err_function_call_unwanted_comma.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"f(42,,43);\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `,`, expected one of (10) identifier, number, `true`, `false`, `if`, `while`, `)`, `(`, `-`, `[`",
                span: 1:6; [5, 6],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1541,
                ),
            },
        ],
    },
)
