ast/src/snapshots/transmute_ast__parser__tests__err_if_missing_close_curly_bracket.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"if true {\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected `}` to close `{` at 1:9, got `eof`",
                span: 1:10; [9, 9],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1838,
                ),
            },
        ],
    },
)
