ast/src/snapshots/transmute_ast__parser__tests__err_if_missing_open_curly_bracket.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `}`, expected one of (14) `.`, `{`, `(`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`, `[`",
                span: 1:9; [8, 9],
                level: Error,
            },
        ],
        inputs: (),
    },
)
