ast/src/snapshots/transmute_ast__parser__tests__err_if_unexpected_token_after_else.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"if true { } else 42\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected number(42), expected one of (2) `if`, `{`",
                span: 1:18; [17, 19],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1548,
                ),
            },
        ],
    },
)
