ast/src/snapshots/transmute_ast__parser__tests__err_let_fn_missing_equal.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected number(1), expected one of (2) `{`, `=`",
                span: 1:9; [8, 9],
                level: Error,
            },
        ],
        inputs: (),
    },
)
