ast/src/snapshots/transmute_ast__parser__tests__err_let_fn_params_invalid_token_in_parameters_list.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"let x(if) = { }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `if`, expected one of (1) `)` 472",
                span: 1:7; [6, 8],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    469,
                ),
            },
        ],
    },
)
