ast/src/snapshots/transmute_ast__parser__tests__err_let_fn_params_missing_colon_and_type.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected `:`, got `)`",
                span: 1:8; [7, 8],
                level: Error,
            },
        ],
        inputs: (),
    },
)
